fix sidebar visibility on mobile

--- a/src/frontend/styles/player/main.less
+++ b/src/frontend/styles/player/main.less
@@ -4,9 +4,6 @@
 	width: 100%;
 	justify-content: space-between;
 
-	&__actions-btn {
-	}
-
 	&__volume-controller {
 		width: 100%;
 		max-width: 260px;
